<resources>
    <string name="app_name">АДСА</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="registrationButtonText">Зарегистрироваться</string>
    <string name="registrationLoginButtonText">Вход в систему</string>
    <string name="registrationInputPassword2Hint">Повторите пароль*</string>
    <string name="registrationInputPassword1Hint">Пароль*</string>
    <string name="registrationLabelText">Регистрация</string>
    <string name="registrationInputPhoneHintText">Например: +7 123 456 78 90</string>
    <string name="registrationInputPhoneHint">Номер телефона*</string>
    <string name="loginLabelText">Вход в систему</string>
    <string name="loginInputPhoneHint">Номер телефона*</string>
    <string name="loginInputPhoneHintText">Например: +7 123 456 78 90</string>
    <string name="loginInputPasswordHint">Пароль*</string>
    <string name="loginButtonText">Войти</string>
    <string name="loginLoginButtonText">Восстановить доступ</string>
    <string name="loginRegisterButtonText">Регистрация</string>
    <string name="restoreAccessLabelText">Восстановить доступ</string>
    <string name="restoreAccessInputPhoneHint">Номер телефона*</string>
    <string name="restoreAccessInputPhoneHintText">Например: +7 123 456 78 90</string>
    <string name="restoreAccessButtonText">Восстановить доступ</string>
    <string name="restoreAccessBackButtonText">Назад</string>
    <string name="restoreAccessInputPassword1Hint">Новый пароль*</string>
    <string name="restoreAccessInputPassword2Hint">Повторите пароль*</string>
    <string name="smsCodeLabelText">Введите код из SMS</string>
    <string name="smsCodeInputCodeHint">Код из SMS*</string>
    <string name="smsCodeButtonText">Подтвердить</string>
    <string name="smsCodeBackButtonText">Назад</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registrationActivityName">Регистрация</string>
    <string name="fabContentDescription">Floating Action Button</string>
    <string name="loginActivityName">Вход в систему</string>
    <string name="restoreAccessActivityName">Восстановить доступ</string>
    <string name="smsCodeActivityName">Ввод кода из SMS</string>
    <string name="registrationInputSurnameHint">Фамилия*</string>
    <string name="registrationInputNameHint">Имя</string>
    <string name="registrationInputPatronymicHint">Отчество</string>
    <string name="registrationInputEmailHint">Электронная почта</string>
    <string name="registrationInputPassword1HintText">Не менее 10 символов</string>
    <string name="smsCodeResendButtonText">Отправить повторно</string>
    <string name="profilePersonalDataDTText">Персональные данные</string>
    <string name="profileSurnameTTIInputHint">Фамилия*</string>
    <string name="profileSurnameTTITitleText">Фамилия*</string>
    <string name="profileNameTTIInputHint">Имя</string>
    <string name="profileNameTTITitleText">Имя</string>
    <string name="profileMidnameTTIInputHint">Отчество</string>
    <string name="profileMidnameTTITitleText">Отчество</string>
    <string name="profileCommunicationMethodsDTText">Способы связи</string>
    <string name="profilePhoneTTIInputHint">Телефон*</string>
    <string name="profilePhoneTTITitleText">Телефон*</string>
    <string name="profileEmailTTIInputHint">E-mail</string>
    <string name="profileEmailTTITitleText">E-mail</string>
    <string name="profileCarInfoDTText">Транспортное средство</string>
    <string name="profileCarBrandTTIInputHint">Марка/тип транспортного средства</string>
    <string name="profileCarBrandTTITitleText">Марка/тип транспортного средства</string>
    <string name="profileCarNumberTTIInputHint">Номер транспортного средства</string>
    <string name="profileCarNumberTTITitleText">Номер транспортного средства</string>
    <string name="profileDocumentsDTText">Документы</string>
    <string name="profileOsagoTTIInputHint">ОСАГО</string>
    <string name="profileOsagoTTITitleText">ОСАГО</string>
    <string name="profileSnilsTTIInputHint">СНИЛС</string>
    <string name="profileSnilsTTITitleText">СНИЛС</string>
    <string name="profileMedPolisTTIInputHint">Медицинский полис</string>
    <string name="profileMedPolisTTITitleText">Медицинский полис</string>
    <string name="profileOtherDTText">Прочая информация</string>
    <string name="profileBirthdayTTIInputHint">День рождения</string>
    <string name="profileBirthdayTTITitleText">День рождения</string>
    <string name="profilePasswordDTText">Сменить пароль</string>
    <string name="profilePassword1TTIInputHint">Новый пароль</string>
    <string name="profilePassword1TTITitleText">Новый пароль (не менее 10 символов)</string>
    <string name="profilePassword2TTIInputHint">Повторите пароль</string>
    <string name="profilePassword2TTITitleText">Повторите пароль</string>
    <string name="profilePasswordButtonText">Сменить пароль</string>
    <string name="sosButtonText">SOS</string>
    <string name="sosVideocallButtonText">Видеовызов</string>
    <string name="sosNewIncidentButtonText">Создать обращение</string>
    <string name="incidentNominatimMentionText"><u>Сервис конвертации между адресом и координатами предоставлен OpenStreetMap Nominatim</u></string>
    <string name="OSMMentionText"><u>OpenStreetMap</u></string>
</resources>