<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginMainConstraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginPhoneConstraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="@+id/loginLabel"
            app:layout_constraintStart_toStartOf="@+id/loginLabel"
            app:layout_constraintTop_toBottomOf="@+id/loginLabel">

            <EditText
                android:id="@+id/loginInputPhone"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="phoneNumberDevice"
                android:ems="10"
                android:hint="@string/loginInputPhoneHint"
                android:inputType="phone"
                android:minHeight="48dp"
                android:singleLine="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginInputPhoneHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginInputPhoneHintText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/loginInputPhone"
                app:layout_constraintTop_toBottomOf="@id/loginInputPhone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/loginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginLabelText"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginInputPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/loginInputPasswordHint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/loginPhoneConstraintLayout"
            app:layout_constraintStart_toStartOf="@+id/loginPhoneConstraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/loginPhoneConstraintLayout" />

<!--        <EditText-->
<!--            android:id="@+id/loginInputPassword2"-->
<!--            style="@style/Widget.AppCompat.EditText"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:autofillHints="newPassword"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/loginInputPassword2Hint"-->
<!--            android:inputType="textPassword"-->
<!--            android:minHeight="48dp"-->
<!--            android:singleLine="true"-->
<!--            app:layout_constraintEnd_toEndOf="@+id/loginInputPassword"-->
<!--            app:layout_constraintStart_toStartOf="@+id/loginInputPassword"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/loginInputPassword" />-->

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/loginButtonText"

            app:layout_constraintEnd_toEndOf="@+id/loginInputPassword"
            app:layout_constraintStart_toStartOf="@+id/loginInputPassword"
            app:layout_constraintTop_toBottomOf="@+id/loginInputPassword" />

        <Button
            android:id="@+id/loginRestoreAccessButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/loginLoginButtonText"

            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <Button
            android:id="@+id/loginRegisterButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/loginRegisterButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loginRestoreAccessButton"
            app:layout_constraintStart_toStartOf="@+id/loginRestoreAccessButton"
            app:layout_constraintTop_toBottomOf="@+id/loginRestoreAccessButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

<!--<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/drawer_layout"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:fitsSystemWindows="true"-->
<!--    tools:openDrawer="start">-->

<!--    <include-->
<!--        android:id="@+id/app_bar_main"-->
<!--        layout="@layout/app_bar_main"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" />-->

<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:id="@+id/nav_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="start"-->
<!--        android:fitsSystemWindows="true"-->
<!--        app:headerLayout="@layout/nav_header_main"-->
<!--        app:menu="@menu/activity_main_drawer" />-->
<!--</androidx.drawerlayout.widget.DrawerLayout>-->