<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--TODO make scrollable-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/restoreAccessMainConstraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/restoreAccessPhoneConstraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:layout_constraintEnd_toEndOf="@+id/restoreAccessLabel"
                app:layout_constraintStart_toStartOf="@+id/restoreAccessLabel"
                app:layout_constraintTop_toBottomOf="@+id/restoreAccessLabel">

                <EditText
                    android:id="@+id/restoreAccessInputPhone"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="phoneNumberDevice"
                    android:ems="10"
                    android:hint="@string/restoreAccessInputPhoneHint"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/restoreAccessInputPhoneHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restoreAccessInputPhoneHintText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/restoreAccessInputPhone"
                    app:layout_constraintTop_toBottomOf="@id/restoreAccessInputPhone" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/restoreAccessLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restoreAccessLabelText"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/restoreAccessInputPassword1"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="newPassword"
                android:ems="10"
                android:hint="@string/restoreAccessInputPassword1Hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@+id/restoreAccessPhoneConstraintLayout"
                app:layout_constraintStart_toStartOf="@+id/restoreAccessPhoneConstraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/restoreAccessPhoneConstraintLayout" />

            <EditText
                android:id="@+id/restoreAccessInputPassword2"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="newPassword"
                android:ems="10"
                android:hint="@string/restoreAccessInputPassword2Hint"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@+id/restoreAccessInputPassword1"
                app:layout_constraintStart_toStartOf="@+id/restoreAccessInputPassword1"
                app:layout_constraintTop_toBottomOf="@+id/restoreAccessInputPassword1" />

            <Button
                android:id="@+id/restoreAccessButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/restoreAccessButtonText"

                app:layout_constraintEnd_toEndOf="@+id/restoreAccessInputPassword2"
                app:layout_constraintStart_toStartOf="@+id/restoreAccessInputPassword2"
                app:layout_constraintTop_toBottomOf="@+id/restoreAccessInputPassword2" />

            <Button
                android:id="@+id/restoreAccessBackButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/restoreAccessBackButtonText"
                android:layout_marginBottom="72dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/restoreAccessButton"
                app:layout_constraintStart_toStartOf="@+id/restoreAccessButton"
                app:layout_constraintTop_toBottomOf="@+id/restoreAccessButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>

<!--<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/drawer_layout"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:fitsSystemWindows="true"-->
<!--    tools:openDrawer="start">-->

<!--    <include-->
<!--        android:id="@+id/app_bar_main"-->
<!--        layout="@layout/app_bar_main"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" />-->

<!--    <com.google.android.material.navigation.NavigationView-->
<!--        android:id="@+id/nav_view"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_gravity="start"-->
<!--        android:fitsSystemWindows="true"-->
<!--        app:headerLayout="@layout/nav_header_main"-->
<!--        app:menu="@menu/activity_main_drawer" />-->
<!--</androidx.drawerlayout.widget.DrawerLayout>-->